# fdtdx-studio

./: .pre-commit-config.yaml  get_browser_logs.py  main.py  pyproject.toml  test_view_helper.py
.github/actions/setup-python-env/: action.yml
.github/actions/setup-python-env/workflows/: main.yml
src/fdtdx_studio/config/: config.toml
src/fdtdx_studio/constraint/: constraints.py
src/fdtdx_studio/controller/: main_controller.py
src/fdtdx_studio/json_handling/: Export.py  Import.py  export.py  load.py
src/fdtdx_studio/parameter/: dtype.py  simulation_parameters.py
src/fdtdx_studio/parameter/datatypes/: model.py  test.py
src/fdtdx_studio/parameter/material/: material.py
src/fdtdx_studio/project/: project.py  project_dialog_controller.py
src/fdtdx_studio/ui/: attribute_definitions.py  project_dialog_controller.py  ui_view.py
src/fdtdx_studio/ui/panels/: __init__.py  auto_config_panel.py  detector_panel.py  energy_detector_panel.py  field_detector_panel.py  gaussian_source_panel.py  material_object_config_panel.py  material_panel.py  mode_overlap_detector_panel.py  mode_source_panel.py  object_config_panel.py  phasor_detector_panel.py  poynting_flux_detector_panel.py  simulation_parameters_panel.py  source_panel.py  switch_element.py  volume_panel.py
src/fdtdx_studio/ui/popups/: base_detector_popup.py  detector_popup.py  energy_detector_popup.py  field_detector_popup.py  mode_overlap_detector_popup.py  new_pop_up.py  phasor_detector_popup.py  pop_up_constraints.py  (+4 more)
tests/: test_ui_generation.py
tests/integration/: test_ui_generation.py
(+7 files in other folders)
