[project]
name = "fdtdx-studio"
version = "0.1.0"
description = "" 
readme = "README.md"
authors = [
    { name = "Yannik Mahlau", email = "mahlau@tnt.uni-hannover.de" },
]
requires-python = ">=3.11"
dependencies = [
    "nicegui>=3.7.1",
    "fdtdx@git+https://github.com/ymahlau/fdtdx.git@df1f8a539bf26fcd0ab059f4fb076ba19a0f1d05",
]

[project.urls]
Repository = "https://github.com/ymahlau/fdtdx-studio"
Documentation = "https://fdtdx-studio.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
external_types = "typings"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
exclude = ["examples", "slurm", "checks", "docs"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "playwright>=1.58.0",
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pymdown-extensions>=10.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
    "tox-uv>=1.16.1",
    "pydoclint>=0.6.6",
    "sphinx>=8.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.1.4",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=3.2.0",
    "myst_nb>=1.3.0",
]

[tool.pyright]
include = ["src", "examples", "checks", "test"]
exclude = ["**/.venv"]